# fm-partition

./: .gitignore  README.md  build.py  exec.sh
output/: p2-1.out  p2-2.out  p2-3.out  p2-4.out  p2-5.out
src/: CMakeLists.txt  global.h  main.cpp  parter.cpp
src/db/: Cell.h  Database.cpp  Database.h  Net.h
src/io/: parse_bkshf.cpp
src/pt/: BucketList.cpp  BucketList.h  Partition.cpp  Partition.h
src/utils/: log.cpp  log.h
testcases/: test.cells  test.nets
verifier/: README
